# legal-ai-bot

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_compliance_analyses.py  003_users_auth.py  004_users_admin.py  005_analysis_result_json.py
config/: settings.py
data/: corpus_seeds.json
docs/: corpus_ops.md
documents/: README.md  manifest.json
documents/ccpa/: ccpa_oag_snapshot.html
frontend/: .env.example  .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
ollama/: Modelfile
processing/: __init__.py  document_store.py  pdf_parser.py  web_scrapper.py
scripts/: build_corpus_index.py  demo_analyze.py  fetch_regulations.py  finetune_embeddings.py  ingest.py  run_benchmarks.py  setup_ollama.py
src/backend/: analysis_summary.py  auth.py  config.py  deps.py  email_service.py  main.py  middleware.py  rag_service.py  rate_limit.py  routes.py  schemas.py
src/config/: __init__.py
src/database/: crud.py  models.py  session.py
src/ml/: __init__.py  benchmarks.py  chunking.py  cross_jurisdiction.py  demo_corpus.py  embedding_finetune.py  embeddings.py  ingestion.py  legal_chunking.py  llm_backend.py  llm_citations.py  ollama_health.py  retriever.py  risk_scorer.py  schemas.py  vector_store.py
src/services/: risk_service.py  (+2 more)
tests/: conftest.py  test_api_core.py
(+43 files in other folders)
